see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, 1.7 and 2.5, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

07-Apr-2012 Jean-Marie Simonet
 # [#28345] Call to member function of non-object: setDebug(). Thanks Don.

03-Apr-2012 Mark Dexter
 # [#28354] Problem logging out if Public group has admin login permission
 # [#28342] *New joomlaupdate component has no icon in admin menu + missing lang string
 # [#27772] Selecting 'Install Sample Data' button causes 'invalid security token' error message if 'Next' button clicked too fast

-------------------- 2.5.4 Stable Release [2-April-2012] ------------------

31-Mar-2012 Mark Dexter
 # [#28329] Joomla Update component requires Purge Cache to change Update Server

30-Mar-2012 Mark Dexter
 # Sample data fixes for SQL Server
 # [#28316] Incorrect ordering value if editing last module
 # [#28325] Deleted files not being deleted during version update

29-Mar-2012 Mark Dexter
 # [#28323] com_joomlaupdate does not delete joomla.xml file in root folder
 # [#28318] Remove duplicate SQL Server directories.

29-Mar-2012 Christophe Demko
 $ Updating installation ini file sk-SK

28-Mar-2012 Mark Dexter
 # [#28303] Change 28026 so it doesn't modify platform files
 # [#28252] Don't show the site secret and optimize ConfigModelApplication
 # [#28172] Backslashes are added every time you save Wrapper menu item

28-Mar-2012 Christophe Demko
 # [#28314] #28299 can cause performance issue if root category is loaded in non multilanguage mode
 # [#27961] Template is not displayed in the Styles (backend)
 # [#28120] XHTML 1.0 Transitional

27-March-2012 Mark Dexter
 +  [#27984] Make the auto-update process more reliable across different hosts
