@@ -69,4 +69,45 @@ abstract class JHtmlBanner
 
 		return $options;
 	}
+	
+	/**
+	 * Returns a pinned state on a grid
+	 *
+	 * @param   integer       $value			The state value.
+	 * @param   integer       $i				The row index
+	 * @param   boolean       $enabled		An optional setting for access control on the action.
+	 * @param   string        $checkbox		An optional prefix for checkboxes.
+	 *
+	 * @return  string        The Html code
+	 *
+	 * @see JHtmlJGrid::state
+	 *
+	 * @since   2.5.5
+	 */
+	public static function pinned($value, $i, $enabled = true, $checkbox = 'cb')
+	{
+		$states	= array(
+			1	=> array(
+				'sticky_unpublish',
+				'COM_BANNERS_BANNERS_PINNED',
+				'COM_BANNERS_BANNERS_HTML_PIN_BANNER',
+				'COM_BANNERS_BANNERS_PINNED',
+				false,
+				'publish',
+				'publish'
+			),
+			0	=> array(
+				'sticky_publish',
+				'COM_BANNERS_BANNERS_UNPINNED',
+				'COM_BANNERS_BANNERS_HTML_UNPIN_BANNER',
+				'COM_BANNERS_BANNERS_UNPINNED',
+				false,
+				'unpublish',
+				'unpublish'
+			),
+		);
+
+		return JHtml::_('jgrid.state', $states, $value, $i, 'banners.', $enabled, true, $checkbox);
+	}
+
 }
