@@ -683,7 +683,6 @@ class UsersModelUser extends JModelAdmin
 		}
 		else
 		{
-			jimport('joomla.user.helper');
 			$result = JUserHelper::getUserGroups($userId);
 		}
 
