@@ -6,6 +6,8 @@
 COM_BANNERS="Banners"
 COM_BANNERS_BANNER_DETAILS="Details"
 COM_BANNERS_BANNER_SAVE_SUCCESS="Banner successfully saved"
+COM_BANNERS_BANNERS_HTML_PIN_BANNER="Pinned banner"
+COM_BANNERS_BANNERS_HTML_UNPIN_BANNER="Unpinned banner"
 COM_BANNERS_BANNERS_N_ITEMS_ARCHIVED="%d banners successfully archived"
 COM_BANNERS_BANNERS_N_ITEMS_ARCHIVED_1="%d banner successfully archived"
 COM_BANNERS_BANNERS_N_ITEMS_CHECKED_IN_0="No banner successfully checked in"
@@ -20,6 +22,8 @@ COM_BANNERS_BANNERS_N_ITEMS_TRASHED_1="%d banner successfully trashed"
 COM_BANNERS_BANNERS_N_ITEMS_UNPUBLISHED="%d banners successfully unpublished"
 COM_BANNERS_BANNERS_N_ITEMS_UNPUBLISHED_1="%d banner successfully unpublished"
 COM_BANNERS_BANNERS_NO_ITEM_SELECTED="No Banners selected"
+COM_BANNERS_BANNERS_PINNED="Pinned Banner"
+COM_BANNERS_BANNERS_UNPINNED="Unpinned Banner"
 COM_BANNERS_BATCH_CLIENT_LABEL="Set Client"
 COM_BANNERS_BATCH_CLIENT_LABEL_DESC="Not making a selection will keep the original client when processing."
 COM_BANNERS_BATCH_CLIENT_NOCHANGE="- Keep original Client -"
