@@ -23,6 +23,32 @@ class JInputFiles extends JInput
 	protected $decodedData = array();
 
 	/**
+	 * Constructor.
+	 *
+	 * @param   array  $source   Ignored.
+	 * @param   array  $options  Array of configuration parameters (Optional)
+	 *
+	 * @since   12.1
+	 */
+	public function __construct(array $source = null, array $options = array())
+	{
+		if (isset($options['filter']))
+		{
+			$this->filter = $options['filter'];
+		}
+		else
+		{
+			$this->filter = JFilterInput::getInstance();
+		}
+
+		// Set the data source.
+		$this->data = & $_FILES;
+
+		// Set the options for the class.
+		$this->options = $options;
+	}
+
+	/**
 	 * Gets a value from the input data.
 	 *
 	 * @param   string  $name     Name of the value to get.
