@@ -9,8 +9,6 @@
 // no direct access
 defined('_JEXEC') or die;
 
-jimport('joomla.utilities.utility');
-
 JLoader::register('MenusHelper', JPATH_ADMINISTRATOR . '/components/com_menus/helpers/menus.php');
 
 abstract class modLanguagesHelper
