@@ -8,7 +8,7 @@
 
 // No direct access.
 defined('_JEXEC') or die;
-jimport('joomla.filter.output');
+
 // Note. It is important to remove spaces between elements.
 $class = $item->anchor_css ? 'class="'.$item->anchor_css.'" ' : '';
 $title = $item->anchor_title ? 'title="'.$item->anchor_title.'" ' : '';
